--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/architect.css">
 </head>
 <body>
+    <!--------Header Starts------------->
   <header>
 <nav>
     <h3 class="nav-title">G3 Architects</h3>
@@ -31,8 +32,22 @@
 <img src="./images/banner.png" alt="">
 </div>
   </header>
+  <!---Header Ends--------------->
   <main>
-
+<!---teams section starts-->
+<section class="teams-container">
+    <div class="teams-img">
+            <img src="./images/team1.png" alt="">
+            <img src="./images/team2.png" alt="">
+            <img src="./images/team3.png" alt="">
+            <img src="./images/team4.png" alt="">
+        </div>
+        <div class="teams-content">
+<h3 class="teams-title"><span class="quick">Quick list</span> <span>of Our</span> <span class="text-features">Features</span></h3>
+<p class="teams-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+<button class="btn-primary">Explore More</button>       
+</div>
+</section>
   </main>
   <footer>
 
