--- a/index.html
+++ b/index.html
@@ -50,7 +50,36 @@
 </section>
 <!-------Features Section----------->
 <section class="features">
-    
+ <div class="features-content">
+<h3 class="section-title">Features You Will <br> Love & Enjoy</h3>
+<p class="gray-text">
+    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+ </p>
+ <div class="card">
+ <h4>Dextop & Mobile Version</h4> 
+<p class="gray-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>  
+ </div>
+ <div class="card">
+ <h4>Drag & Drop Builder</h4> 
+<p class="gray-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>  
+ </div>
+ <div class="card">
+ <h4>Awesome Modern Design</h4> 
+<p class="gray-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>  
+ </div>
+ <div class="card">
+ <h4>Super Easy To Edit</h4> 
+<p class="gray-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>  
+ </div>
+ </div>   
+ <div class="features-img">
+  <img src="./images/architect.png" alt="">  
+ <div class="ten-years-badge">
+<h2>10+ Years</h2>
+<p>Experience</p>    
+ </div>
+ </div>
+</div>
 </section>
 
 <!------facts section------------------>
